--- a/CleanArch/CleanArch.Infrastructure.IoC/CleanArch.Infrastructure.IoC.csproj
+++ b/CleanArch/CleanArch.Infrastructure.IoC/CleanArch.Infrastructure.IoC.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CleanArch.Application\CleanArch.Application.csproj" />
+    <ProjectReference Include="..\CleanArch.Infrastructure.Bus\CleanArch.Infrastructure.Bus.csproj" />
     <ProjectReference Include="..\CleanArch.Infrastructure.Data\CleanArch.Infrastructure.Data.csproj" />
   </ItemGroup>
 
